--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -2,7 +2,7 @@ name: YTMonster Login and Launch Client Workflow
 
 on:
   schedule:
-    - cron: '0 */1 * * *'  # Run every 1 hour (adjust if needed)
+    - cron: '0 */1 * * *'  # Run every hour (adjust as needed)
   workflow_dispatch:
 
 jobs:
@@ -112,7 +112,6 @@ jobs:
               } catch (navError) {
                 console.warn("Navigation did not occur; checking for login form disappearance.");
               }
-              // Confirm the login form is no longer visible.
               await page.waitForFunction(() => !document.querySelector("#formLogin"), { timeout: 30000 });
               await page.screenshot({ path: path.join(screenshotsDir, "step5_logged_in.png"), fullPage: true });
               console.log("Login successful.");
@@ -125,7 +124,9 @@ jobs:
               const newPagePromise = new Promise(resolve => {
                 browser.once('targetcreated', async target => {
                   if (target.type() === 'page') {
+                    console.log("New target of type 'page' detected. Retrieving client page...");
                     const newPage = await target.page();
+                    console.log("Client page successfully retrieved.");
                     resolve(newPage);
                   }
                 });
@@ -133,18 +134,29 @@ jobs:
               
               // Click the button to open the client.
               await page.click("a.open-client");
+              console.log("Launch Client button clicked. Waiting for client page to open...");
+
               // Get the new client page.
               const clientPage = await newPagePromise;
-              
-              // Optional: Wait for the client page to stabilize.
+              console.log("Client page opened.");
+
+              // Attempt to wait for navigation on the client page.
+              console.log("Attempting to wait for navigation event on the client page...");
               try {
                 await clientPage.waitForNavigation({ waitUntil: "domcontentloaded", timeout: 60000 });
+                console.log("Navigation event detected on the client page.");
               } catch (e) {
-                console.warn("No navigation event on client page. Proceeding with a fixed delay.");
+                console.warn("No navigation event on client page. Error details: ", e.message);
+                console.warn("Proceeding with a fixed delay of 5 seconds.");
               }
-              await clientPage.waitForTimeout(5000);
+              
+              console.log("Starting fixed delay (5 seconds) using setTimeout...");
+              await new Promise(resolve => setTimeout(resolve, 5000));
+              console.log("Fixed delay completed.");
+
+              // Capture final screenshot of the client page.
               await clientPage.screenshot({ path: path.join(screenshotsDir, "step6_client_opened.png"), fullPage: true });
-              console.log("Client launched successfully.");
+              console.log("Client page screenshot captured successfully.");
             } catch (error) {
               console.error("An error occurred during the process:", error.message);
               await page.screenshot({ path: path.join(screenshotsDir, "error.png"), fullPage: true });
