--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -2,7 +2,7 @@ name: YTMonster Login and Launch Client Workflow
 
 on:
   schedule:
-    - cron: '0 */1 * * *'  # Run every hour (adjust as needed)
+    - cron: '0 */1 * * *'  # Runs every hour (adjust as needed)
   workflow_dispatch:
 
 jobs:
@@ -114,6 +114,7 @@ jobs:
               } catch (navError) {
                 console.warn("Navigation did not occur; checking for login form disappearance.");
               }
+              // If login succeeded, the form is gone.
               await page.waitForFunction(() => !document.querySelector("#formLogin"), { timeout: 30000 });
               await page.screenshot({ path: path.join(screenshotsDir, "step5_logged_in.png"), fullPage: true });
               console.log("Login successful.");
@@ -142,39 +143,87 @@ jobs:
               const clientPage = await newPagePromise;
               console.log("Client page opened.");
 
-              // Attempt to wait briefly for a navigation event (5-second timeout).
+              // Attempt a brief wait for navigation (5-second timeout).
               console.log("Checking for navigation event on the client page for 5 seconds...");
               try {
                 await clientPage.waitForNavigation({ waitUntil: "domcontentloaded", timeout: 5000 });
                 console.log("Navigation event detected on the client page.");
               } catch (e) {
-                console.warn("No navigation event detected on the client page. Proceeding with a fixed delay of 5 seconds.");
+                console.warn("No navigation event detected on the client page. Proceeding with a 5-second delay.");
               }
               
-              console.log("Starting fixed delay (5 seconds) using setTimeout...");
+              console.log("Starting a fixed 5-second delay before proceeding...");
               await new Promise(resolve => setTimeout(resolve, 5000));
-              console.log("Fixed delay completed.");
+              console.log("Delay completed.");
               
               // Capture a screenshot of the client page.
               await clientPage.screenshot({ path: path.join(screenshotsDir, "step6_client_opened.png"), fullPage: true });
               console.log("Client page screenshot captured successfully.");
 
               // Step 7: Unmaximize the client window and click the Start button.
+              // (If the site specifically requires the window not to be fullscreen, let's do so now.)
               console.log("Unmaximizing client window...");
               await clientPage.setViewport({ width: 800, height: 600 });
+              await clientPage.screenshot({ path: path.join(screenshotsDir, "step7_unmaximized.png"), fullPage: true });
               console.log("Client window unmaximized.");
-              
+
               console.log("Waiting for the Start button to become visible...");
               await clientPage.waitForSelector('#startBtn', { visible: true, timeout: 30000 });
-              await clientPage.screenshot({ path: path.join(screenshotsDir, "step7_before_start.png"), fullPage: true });
-              
               console.log("Clicking the Start button...");
               await clientPage.click('#startBtn');
-              await clientPage.screenshot({ path: path.join(screenshotsDir, "step7_after_start.png"), fullPage: true });
-              console.log("Start button clicked successfully.");
+              await clientPage.screenshot({ path: path.join(screenshotsDir, "step7_after_start_click.png"), fullPage: true });
+              console.log("Start button clicked.");
+
+              // Step 8: Check if a new window pops up, then wait 30 seconds.
+              console.log("Waiting to see if a new window opens after Start...");
+              const newWindowPromise = new Promise((resolve, reject) => {
+                let newWindowDetected = false;
+                const checkTime = Date.now();
+                const maxCheckInterval = 5000; // 5 seconds
+
+                // Listen for any new targets in that short window
+                const listener = async (target) => {
+                  if (target.type() === 'page') {
+                    console.log("New window opened after Start. Taking a screenshot...");
+                    newWindowDetected = true;
+                    browser.removeListener('targetcreated', listener);
+
+                    const popupPage = await target.page();
+                    await popupPage.screenshot({ path: path.join(screenshotsDir, "step8_new_window_after_start.png"), fullPage: true });
+                    resolve();
+                  }
+                };
+                browser.on('targetcreated', listener);
+
+                // After 5s, if no new window detected, resolve anyway.
+                const waitInterval = setInterval(() => {
+                  if (Date.now() - checkTime >= maxCheckInterval) {
+                    clearInterval(waitInterval);
+                    browser.removeListener('targetcreated', listener);
+                    if (!newWindowDetected) {
+                      console.log("No new window was detected within 5 seconds of starting.");
+                    }
+                    resolve();
+                  }
+                }, 500);
+              });
+
+              await newWindowPromise;
+
+              // Regardless of window detection, do a final 30-second wait to let the Start process run.
+              console.log("Waiting 30 seconds after Start for any progress or changes...");
+              await new Promise(resolve => setTimeout(resolve, 30000));
+              await clientPage.screenshot({ path: path.join(screenshotsDir, "step8_after_30secs.png"), fullPage: true });
+              console.log("30-second wait completed. Final screenshot captured.");
+
             } catch (error) {
               console.error("An error occurred during the process:", error.message);
-              await page.screenshot({ path: path.join(screenshotsDir, "error.png"), fullPage: true });
+              // Attempt a final screenshot on error.
+              try {
+                await page.screenshot({ path: path.join(screenshotsDir, "error.png"), fullPage: true });
+              } catch (_) {
+                // If page is no longer available, ignore
+              }
               process.exit(1);
             } finally {
               await browser.close();
