--- a/.github/workflows/ytm.yml
+++ b/.github/workflows/ytm.yml
@@ -84,30 +84,30 @@ jobs:
             });
 
             try {
-              // Step 1: Navigate to the login page.
+              // STEP 1: Navigate to login page.
               console.log("Navigating to https://www.ytmonster.net/exchange/views ...");
               await page.goto("https://www.ytmonster.net/exchange/views", { waitUntil: "domcontentloaded", timeout: 60000 });
               await page.screenshot({ path: path.join(screenshotsDir, "step1_navigate.png"), fullPage: true });
 
-              // Step 2: Wait for the login form to load.
+              // STEP 2: Wait for login form.
               console.log("Waiting for login form elements...");
               await page.waitForSelector('#inputUsername', { visible: true, timeout: 30000 });
               await page.waitForSelector('#inputPassword', { visible: true, timeout: 30000 });
               await page.screenshot({ path: path.join(screenshotsDir, "step2_login_form_loaded.png"), fullPage: true });
 
-              // Step 3: Fill in the credentials.
+              // STEP 3: Fill in credentials.
               console.log("Filling in credentials...");
               await page.type('#inputUsername', username, { delay: 100 });
               await page.type('#inputPassword', password, { delay: 100 });
               await page.screenshot({ path: path.join(screenshotsDir, "step3_credentials_filled.png"), fullPage: true });
 
-              // Step 4: Click the Login button.
+              // STEP 4: Click the login button.
               console.log("Submitting the login form...");
               await page.waitForSelector("button[type='submit']", { visible: true, timeout: 30000 });
               await page.click("button[type='submit']");
               await page.screenshot({ path: path.join(screenshotsDir, "step4_after_submit_click.png"), fullPage: true });
 
-              // Step 5: Wait for login success.
+              // STEP 5: Wait for login success.
               console.log("Waiting for login success...");
               try {
                 await page.waitForNavigation({ waitUntil: "domcontentloaded", timeout: 30000 });
@@ -118,120 +118,136 @@ jobs:
               await page.screenshot({ path: path.join(screenshotsDir, "step5_logged_in.png"), fullPage: true });
               console.log("Login successful.");
 
-              // Step 6: Launch the client by clicking the 'Launch Client' button.
+              // STEP 6: Launch the client.
               console.log("Clicking the Launch Client button...");
               await page.waitForSelector("a.open-client", { visible: true, timeout: 30000 });
               
-              // Listen for the new window (client page) to open.
               const newPagePromise = new Promise(resolve => {
-                const listener = async (target) => {
+                browser.once('targetcreated', async target => {
                   if (target.type() === 'page') {
                     console.log("New target of type 'page' detected. Retrieving client page...");
                     const newPage = await target.page();
                     console.log("Client page successfully retrieved.");
-                    if (typeof browser.off === 'function') {
-                      browser.off('targetcreated', listener);
-                    }
                     resolve(newPage);
                   }
-                };
-                if (typeof browser.on === 'function') {
-                  browser.on('targetcreated', listener);
-                }
-                // After 5 seconds, if no new window is detected, resolve with null.
-                setTimeout(() => {
-                  if (typeof browser.off === 'function') {
-                    browser.off('targetcreated', listener);
-                  }
-                  console.warn("No new window was detected within 5 seconds after Launch Client.");
-                  resolve(null);
-                }, 5000);
+                });
               });
 
-              // Click the button to open the client.
               await page.click("a.open-client");
               console.log("Launch Client button clicked. Waiting for client page to open...");
 
-              // Get the new client page.
               const clientPage = await newPagePromise;
-              if (!clientPage) {
-                throw new Error("Client page did not open as expected.");
-              }
               console.log("Client page opened.");
 
-              // Attempt a brief wait for navigation (5-second timeout).
+              // Try brief wait for navigation (5s).
               console.log("Checking for navigation event on the client page for 5 seconds...");
               try {
                 await clientPage.waitForNavigation({ waitUntil: "domcontentloaded", timeout: 5000 });
                 console.log("Navigation event detected on the client page.");
               } catch (e) {
-                console.warn("No navigation event detected on the client page. Proceeding with a fixed delay of 5 seconds.");
+                console.warn("No navigation event detected on the client page. Proceeding with a 5-second delay.");
               }
-              
-              console.log("Starting a fixed 5-second delay before proceeding...");
+
+              console.log("Starting a fixed 5-second delay...");
               await new Promise(resolve => setTimeout(resolve, 5000));
               console.log("Delay completed.");
-              
-              // Capture a screenshot of the client page.
+
               await clientPage.screenshot({ path: path.join(screenshotsDir, "step6_client_opened.png"), fullPage: true });
-              console.log("Client page screenshot captured successfully.");
+              console.log("Client page screenshot captured.");
 
-              // Step 7: Unmaximize the client window and click the Start button.
-              console.log("Unmaximizing client window...");
-              await clientPage.setViewport({ width: 800, height: 600 });
-              // Dispatch a resize event so the UI updates.
-              await clientPage.evaluate(() => window.dispatchEvent(new Event('resize')));
+              // STEP 7: Unmaximize and click Start.
+              console.log("[DEBUG] Attempting to unmaximize the client window...");
+
+              // 7a) Log current viewport from inside the page:
+              let dimsBefore = await clientPage.evaluate(() => ({
+                w: window.innerWidth, 
+                h: window.innerHeight
+              }));
+              console.log(`[DEBUG] Current window.innerWidth=${dimsBefore.w}, window.innerHeight=${dimsBefore.h} (before resizing).`);
+
+              // 7b) Set viewport to a smaller size, then attempt window.resizeTo inside the page.
+              const UNMAX_WIDTH = 800;
+              const UNMAX_HEIGHT = 600;
+
+              console.log(`[DEBUG] Setting viewport to ${UNMAX_WIDTH}x${UNMAX_HEIGHT}...`);
+              await clientPage.setViewport({ width: UNMAX_WIDTH, height: UNMAX_HEIGHT });
+
+              console.log("[DEBUG] Attempting window.resizeTo in page context...");
+              await clientPage.evaluate((w, h) => {
+                window.resizeTo(w, h);
+              }, UNMAX_WIDTH, UNMAX_HEIGHT);
+
+              // Wait for the page to process the resize.
+              await new Promise(resolve => setTimeout(resolve, 3000));
+
+              // 7c) Log new viewport from inside the page:
+              let dimsAfter = await clientPage.evaluate(() => ({
+                w: window.innerWidth, 
+                h: window.innerHeight
+              }));
+              console.log(`[DEBUG] After resizing, window.innerWidth=${dimsAfter.w}, window.innerHeight=${dimsAfter.h}.`);
+
+              // 7d) Check whether the unmaximize error is still present in the page text:
+              const bodyText = await clientPage.evaluate(() => document.body.innerText || "");
+              if (bodyText.includes("Please unmaximize the client window")) {
+                console.warn("[DEBUG] The 'unmaximize window' error text is still present in the page.");
+              } else {
+                console.log("[DEBUG] The 'unmaximize window' error text not found in document.body.");
+              }
+
+              // Take a screenshot
               await clientPage.screenshot({ path: path.join(screenshotsDir, "step7_unmaximized.png"), fullPage: true });
-              console.log("Client window unmaximized.");
+              console.log("[DEBUG] Screenshot taken after unmaximize attempt.");
 
-              console.log("Waiting for the Start button to become visible...");
+              console.log("Waiting for the Start button to be visible...");
               await clientPage.waitForSelector('#startBtn', { visible: true, timeout: 30000 });
               console.log("Clicking the Start button...");
               await clientPage.click('#startBtn');
               await clientPage.screenshot({ path: path.join(screenshotsDir, "step7_after_start_click.png"), fullPage: true });
               console.log("Start button clicked.");
 
-              // Step 8: Check if a new window opens after Start.
-              console.log("Waiting to see if a new window opens after Start...");
+              // STEP 8: Check for new window after Start, then wait 30s.
+              console.log("Waiting 5s to see if a new window opens after Start...");
               const newWindowPromise = new Promise(resolve => {
                 let newWindowDetected = false;
-                const listener = async (target) => {
+                const checkStart = Date.now();
+                const maxCheckTime = 5000; // check for 5 seconds
+
+                const listener = async target => {
                   if (target.type() === 'page') {
-                    console.log("New window opened after Start. Taking a screenshot...");
                     newWindowDetected = true;
-                    if (typeof browser.off === 'function') {
-                      browser.off('targetcreated', listener);
-                    }
+                    console.log("New window opened after Start. Taking a screenshot...");
                     const popupPage = await target.page();
                     await popupPage.screenshot({ path: path.join(screenshotsDir, "step8_new_window_after_start.png"), fullPage: true });
                     resolve();
                   }
                 };
-                if (typeof browser.on === 'function') {
-                  browser.on('targetcreated', listener);
-                }
-                setTimeout(() => {
-                  if (!newWindowDetected) {
-                    console.log("No new window was detected within 5 seconds after Start.");
+
+                browser.on('targetcreated', listener);
+
+                const interval = setInterval(() => {
+                  if (Date.now() - checkStart >= maxCheckTime) {
+                    clearInterval(interval);
+                    browser.removeListener('targetcreated', listener);
+                    if (!newWindowDetected) {
+                      console.log("No new window was detected within 5 seconds after Start.");
+                    }
+                    resolve();
                   }
-                  if (typeof browser.off === 'function') {
-                    browser.off('targetcreated', listener);
-                  }
-                  resolve();
-                }, 5000);
+                }, 500);
               });
               await newWindowPromise;
-              
-              // Regardless of window detection, wait a final 30 seconds.
+
               console.log("Waiting 30 seconds after Start for any progress or changes...");
               await new Promise(resolve => setTimeout(resolve, 30000));
               await clientPage.screenshot({ path: path.join(screenshotsDir, "step8_after_30secs.png"), fullPage: true });
               console.log("30-second wait completed. Final screenshot captured.");
+
             } catch (error) {
               console.error("An error occurred during the process:", error.message);
               try {
                 await page.screenshot({ path: path.join(screenshotsDir, "error.png"), fullPage: true });
-              } catch (_) { }
+              } catch (_) {}
               process.exit(1);
             } finally {
               await browser.close();
